Great Tea Section Completed

--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -46,3 +46,9 @@ Banner
 /*--------------------------------
 Our Featured Products
 ----------------------------------*/
+/*---------------------------
+Great Tea
+---------------------------------*/
+/*----------------------------
+Meet Our Super Clients
+---------------------------------*/
